L'inversion des dépendances pour les URLs a été effectuée.